--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
+    "axios": "^1.8.4",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.15",
     "vue": "^3.5.13",
