--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.15",
     "vue": "^3.5.13",
-    "vue-router": "4"
+    "vue-router": "4",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.51.0",
