--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@kalimahapps/vue-icons": "^1.7.1",
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.8.4",
     "pinia": "^3.0.1",
